# time-series-forecasting

./: .dvcignore  .gitignore  README.md  pyproject.toml  requirements.txt  wati-explore.txt
.dvc/: config
data/dbdump/: Dump20230706.sql.dvc
data/dvc_gdrive_remote/: .gitignore  DBDump.sql.dvc
docs/: download_from_kaggle.md  sql_query.md
notebooks/: df_polars.ipynb  df_vaex.ipynb  discarded.ipynb  eda.ipynb  polars_ug.ipynb  pycaret_pl_csv.ipynb  pycaret_pl_db.ipynb  research.ipynb  sql_research.ipynb
notebooks/references/: Merlion.ipynb  klib.ipynb  pt2-time-series-forecasting-with-xgboost.ipynb  vaex.ipynb
src/: convert_csv.py  data_cleaner.py  data_exploration.py  data_loader.py  helper.py  logger.py  train_store_txn_as_view.sql
src/scripts/: create_view.sql  create_view_full_df.sql  create_view_quito.sql  create_view_quito_2013.sql  create_view_quito_44.sql  create_view_sales_year_state.sql  create_view_year_2013.sql  full_df_as_view.sql  import_csv_to_local_db.sql  query_data.sql  query_joined_table.sql  quito.sql  train_store_hols.sql
