[tool.poetry]
name = "store-sales-ts"
version = "0.1.0"
description = "kaggle store sales - time series forecasting"
authors = ["ggjx22 <navlag18011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "1.5.3"
numpy = "^1.23.5"
kaggle = "1.5.15"
pymysql = "1.1.0"
python-dotenv = "1.0.0"
dvc = "3.4.0"
tqdm = "4.65.0"
ydata-profiling = "4.3.1"
sqlalchemy = "1.4.40"
mysql-connector-python = "8.0.33"
connectorx = "0.3.1"
polars = "0.19"
pyarrow = "12.0.1"
jupyter-book = "0.15.1"
jupytext = "1.15.0"
geopy = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
